6-multi-volume/network.tf
resource "aws_network_acl" "ndap_acl" {
  //default_network_acl_id = "${aws_vpc.ndap_vpc.default_network_acl_id}"
  vpc_id     = aws_vpc.ndap_pri.id
  subnet_ids = [aws_subnet.private.id]

  ingress {
    protocol   = -1 // all
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  egress {
    protocol   = -1
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }
  /*
  subnet_ids = [
    "${aws_subnet.public_1a.id}",
    "${aws_subnet.private_1a.id}",
  ]
*/
  tags = {
    Name = "acl Example"
  }
}


resource "aws_eip" "ndap_eip" {
  instance = aws_instance.ndap_mgmt[0].id
  vpc      = true
}
resource "aws_internet_gateway" "ndap_gw" {

  vpc_id = aws_vpc.ndap_pri.id
  tags = {
    Name = "internet-gateway"
  }
}


resource "aws_route_table" "route_pri" {
  //default_route_table_id = "${aws_vpc.ndap_pub.default_route_table_id}"

  vpc_id = aws_vpc.ndap_pri.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.ndap_gw.id
  }
  tags = {
    Nmae = "private Route"
  }
}


resource "aws_route_table_association" "ndap_vpc_association" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.route_pri.id

}
/*
resource "aws_route_table_association" "ndap_subnet_association" {
  subnet_id      = "${aws_subnet.private.id}"
  route_table_id = "${aws_route_table.route_pri.id}"
}
*/
resource "aws_security_group" "dev_ssh" {
  vpc_id      = aws_vpc.ndap_pri.id
  name        = "NDAP SSH"
  description = "Allow http port from all Test"
  //SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}


resource "aws_subnet" "private" {
  vpc_id                  = aws_vpc.ndap_pri.id
  availability_zone       = var.avail_zone
  cidr_block              = var.subnet_cidr
  map_public_ip_on_launch = true
  tags = {
    Name = "private subnet"
  }
}

/*
resource "aws_subnet" "public" {
  vpc_id            = "${aws_vpc.ndap_pub.id}"
  availability_zone = "ap-northeast-2a"
  cidr_block        = "10.10.10.0/24"
  //map_public_ip_on_launch = false

  tags = {
    Name = "public subnet"
  }
}

*/

resource "aws_vpc" "ndap_pri" {
  cidr_block = var.vpc_cidr
  //enable_dns_hostnames = true            // 이게 뭘까?
  //enable_dns_support   = true            // 이게 뭘까?
  enable_dns_hostnames = false
  instance_tenancy     = "default"

  tags = {
    Name = "Private VPC for NDAP"
  }
}

/*

resource "aws_vpc" "ndap_pub" {

  cidr_block           = "10.10.0.0/16" // 172.17으로만
  enable_dns_hostnames = true           // 이게 뭘까?
  enable_dns_support   = true           // 이게 뭘까?

  instance_tenancy = "default"

  tags = {
    Name = "Public VPC for NDAP"
  }
}

*/
